# skill-hub-public

./: .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  alembic.ini  compose.yaml  constraints.txt  pyproject.toml  requirements-image.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  macos-release.yml
docs/: deployment-tencent-shanghai-mvp.md  github-publication-policy.md  macos-release.md
docs/adr/: 0001-independent-skill-hub.md
docs/api/: openapi.json  skill-manifest.schema.json
migrations/: env.py
migrations/versions/: 8db5f0998fbf_initial_schema.py  f2a6c3d9e14b_cast_manifest_json_to_jsonb_in_guard.py
ops/caddy/: Caddyfile
ops/macos/: INSTALL.txt  build_cli.sh  create_dmg.sh  notarize_cli.sh  publish_skill.py  release_cli.sh  skillctl_entry.py  verify_cli.sh
ops/scripts/: backup_postgres.sh  export_openapi.py  p95_probe.py  restore_postgres.sh
ops/tencent/: .env.example  README.md  aws-config  backup.env.example  backup.sh  bootstrap-lighthouse.sh  cam-policy-application.json  cam-policy-backup-restore.json  cam-policy-backup.json  common.sh  deploy.sh  healthcheck.sh  restore.sh  rollback.sh  trusted-tag-signers.example
src/skillhub/: __init__.py  audit.py  auth.py  (+7 more)
tests/: __init__.py  conftest.py  test_adapters.py  test_api.py  test_backup_systemd_contract.py  test_cli_commands.py  test_cli_installer.py  test_cli_registry.py  test_github_publisher.py  test_idempotency.py  test_manifest_schema.py  test_migration_manifest_json_guard.py  test_openapi_contract.py  test_release_build_contract.py  test_security_scanner.py  test_security_signatures.py  test_storage.py  test_worker_e2e.py
(+35 files in other folders)
